<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="vm"
            type="com.hc.login.vm.LoginVM" />
        <variable
            name="userCredit"
            type="java.lang.String" />
        <import type="frame.utils.StringFormat" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@mipmap/common_bg_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            android:orientation="vertical"
            android:translationZ="2dp">

            <TextView style="@style/AppNameTextStyle" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/login_not_login_bg"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingTop="27dp"
                    android:paddingBottom="26dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/login_not_login_content"
                        android:textColor="#333"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/user"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="15dp"
                        android:text="@{vm.getText(user.context,userCredit)"
                        android:textColor="#333333"
                        android:textSize="40sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn"
                        style="@style/ButtonLoginYellowText"
                        android:enabled="@{vm.isEnableLoginLoan}"
                        android:onClick="@{vm::start}"
                        android:text="@string/login_not_login_loan" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/login_not_login_bg"
                android:orientation="vertical"
                android:translationZ="1dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:fontFamily="sans-serif-medium"
                    android:paddingStart="10dp"
                    android:text="@string/login_not_get_loan_desc"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="57dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="24dp">

                    <TextView
                        style="@style/LoginNotLoginText"
                        android:drawableTop="@mipmap/login_submit_info"
                        android:text="@string/login_not_login_info" />

                    <TextView
                        android:layout_width="10dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text=">"
                        android:textColor="#FDB900" />

                    <TextView
                        style="@style/LoginNotLoginText"
                        android:drawableTop="@mipmap/login_get_credit"
                        android:text="@string/login_not_login_credit" />

                    <TextView
                        android:layout_width="10dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="> "
                        android:textColor="#FDB900" />

                    <TextView
                        style="@style/LoginNotLoginText"
                        android:drawableTop="@mipmap/login_get_money"
                        android:text="@string/login_not_login_money" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </FrameLayout>


</layout>
