<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.hc.login.vm.LoginVM" />
    </data>

    <LinearLayout
        touchOther="@{()->vm.touchOutMenuRectHintMenu()}"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <TextView style="@style/AppNameTextStyle" />

        <TextView
            android:layout_width="265dp"
            android:layout_height="25dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="63dp"
            android:text="Login/Register With appname"
            android:textColor="#ffffffff"
            android:textSize="18sp" />

        <TextView
            android:layout_width="266dp"
            android:layout_height="37dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:gravity="start"
            android:text="Provide the mobile number linked to your Aadhaar for faster processing"
            android:textColor="#fffff084"
            android:textSize="13sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="35dp">

            <TextView
                android:id="@+id/code"
                android:layout_width="wrap_content"
                android:layout_height="22.5dp"
                android:gravity="center"
                android:minWidth="59dp"
                android:text="@string/phoneCode"
                android:textColor="#fff"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/phone"
                app:layout_constraintEnd_toStartOf="@id/phone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:height="22.5dp"
                android:background="@null"
                android:hint="Enter your mobile number"
                android:inputType="phone"
                android:text="@={vm.phoneNumber}"
                android:textColor="#FFF100"
                android:textColorHint="#ffe7e7e7"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/code"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="14dp"
                android:background="#fff"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phone" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/nextBtn"
            style="@style/ButtonLoginFFFText"
            android:layout_marginStart="35dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="35dp"
            android:onClick="@{()->vm.doLoginStep1IsToSendSms(nextBtn)}"
            android:enabled="@{vm.enablePhoneLongNextBtn}"
            android:text="@string/login_phone_next_text" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="bottom"
            android:layout_weight="1">

            <TextView
                android:id="@+id/language"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="115dp"
                android:layout_marginBottom="120dp"
                android:drawableEnd="@mipmap/login_lanuage_indicater"
                android:gravity="center"
                android:minWidth="89dp"
                android:onClick="@{()->vm.clickLanguage()}"
                android:text="@{vm.language.name, default=@string/lan_login_language_en}"
                android:textColor="#ffffffff"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Space
                android:id="@+id/space"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="@id/language"
                app:layout_constraintTop_toBottomOf="@id/language" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="17dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="16dp"
                android:layout_marginTop="50dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/login_terms"
                android:textColor="#ffffffff"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/language" />

            <com.hc.uicomponent.menu.BaseMenuUI
                android:id="@+id/menu"
                callback="@{vm.callbackSelectLanguageData}"
                menuData="@{vm.listData}"
                menuTitle="@{vm.title}"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:visibility="@{vm.isLanguageMenuShowHide, default=gone}"
                app:layout_constraintStart_toEndOf="@id/space"
                app:layout_constraintTop_toBottomOf="@id/language" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>
